--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,22 @@ th , td {
 a {
   font-size: 20px;
 }
+button{
+
+  font-size: 15px;
+
+  padding: 10px;
+
+  color: #CFE919;
+
+  margin: 4px 2px ;
+
+  background-color: #000000;
+
+  margin-left: auto;
+
+  margin-right: auto;
+
+  border-radius: 10pt;
+
+}
