--- a/styles.css
+++ b/styles.css
@@ -22,24 +22,45 @@ a {
 
 button{
 
-  font-size: 15px;
+  font-size: 20pt;
 
-  padding: 10px;
+ color: white;
 
-  color: #CFE919;
+  padding: 15px 32px;
 
-  margin: 4px 2px ;
+border-radius: 10px;
 
-  background-color: #000000;
+  background-color: black;
+
+  margin: 4px 2px;
 
   margin-left: auto;
 
   margin-right: auto;
 
-  border-radius: 10pt;
-  display:block ;
+  display: block;
 
 }
+
+
+ 
+
+
+
+
+
+ 
+
+
+
+  
+
+
+
+
+
+
+
 
 
 
